--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "sweetalert2": "^7.26.11",
+    "v-mask": "^1.3.2",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -15,6 +19,8 @@
     "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
     "@vue/cli-service": "^3.0.0-rc.12",
     "@vue/eslint-config-airbnb": "^3.0.0-rc.12",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -26,7 +32,11 @@
       "plugin:vue/essential",
       "@vue/airbnb"
     ],
-    "rules": {},
+    "rules": {
+      "linebreak-style": 0,
+      "semi": 0,
+      "comma-dangle": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
